# kafka_sender_rust

./: .gitignore  Cargo.toml  README.md  config_template.yml  docker-compose.yaml  howto.txt
messages/: msg.csv  msg.txt
src/: kafka_consumer.rs  kafka_producer.rs  main.rs  simple_kafka_consumer.rs  simple_kafka_producer.rs  types.rs
