[package]
name = "kafka_sender_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
ctrlc = "3.1.8"
clap = { version = "3.0.5", features = ["derive"] }
csv = "1.1"
colored = "2.0.0"


[dependencies.confy]
version = "0.4.0"
features = ["yaml_conf"]
default-features = false

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
