[package]
name = "kafka_sender_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
rand = "0.8.4"
ctrlc = "3.4.4"
clap = { version = "4.5.15", features = ["derive"] }
csv = "1.3.0"
colored = "2.1.0"
log = "0.4.22"
env_logger = "0.11.5"
error-stack = "0.5.0"
thiserror = "1.0.63"


[dependencies.confy]
version = "0.6.1"
features = ["yaml_conf"]
default-features = false

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }

[profile.release]
opt-level = 3  # Optimization level (0-3)
lto = true     # Enable Link Time Optimization
codegen-units = 1  # Further optimize binary size by setting codegen units to 1